# yeehaw

./: .gitignore  ;  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  Makefile  PRD.md  PRD_IMPROVED.md  README.md  TODO.md  TRANSLATION.md  _TODO.md  _TODO_DONE.md  kwaak.toml  macro_brainstorm.md  receive_event  rustfmt.toml
.lisa/: config.toml  status.json  status_history.json
.openhands/microagents/: repo.md
assets/figlet/: worlds_smallest_figlet.flf
box_drawing_logic/: Cargo.toml
box_drawing_logic/src/: from_ch.rs  lib.rs  to_ch.rs
docs/: 01_element_creation.md  01_getting_started.md  03_architecture.md  GLOSSARY.md  _DUMP.md  architecture.md
examples/: color_test.rs  editor_test.rs  file_nav_test.rs  hello_werld.rs  image_test.rs  menu_test.rs  scrollable_pane_test.rs  split_test.rs  stack_test.rs  tabs_test.rs  terminal_test.rs  widget_test.rs  window_test.rs
src/: TODO.md  _ISSUES.md  ch.rs  color.rs  colour.rs  context.rs  cui.rs  cui_ch.rs  cui_location.rs  debug.rs  dyn_location.rs  dyn_value.rs  element.rs  errors.rs  event.rs  keyboard.rs  lib.rs  location.rs  organizer.rs  prioritizer.rs  scaled_value.rs  scl_location.rs  scl_value.rs  sorting_hat.rs  style.rs  taffy_location.rs
src/elements/: debug_pane.rs  file_navigator.rs  file_viewer.rs  image_viewer.rs  menu.rs  menu_item.rs  menu_right_click.rs  mod.rs  pane.rs  pane_parent.rs  pane_scrollable.rs  pane_standard.rs  ratwrap.rs  stack.rs  tabs.rs  terminal.rs  terminal_editor.rs  window.rs
src/widgets/: README.md  common.rs  el_clr_sel.rs  el_widget_pane.rs  mod.rs  organizer.rs  scaled_value.rs  widget.rs  widget__test.rs  widget_button.rs  widget_checkbox.rs  widget_col_sel.rs  widget_dropdownlist.rs  widget_figlet.rs  widget_label.rs  widget_listbox.rs  widget_listbox_mono.rs  widget_megatext.rs  widget_radio.rs  widget_scrollbar.rs  widget_textbox.rs  widget_textbox_numbers.rs  widget_title.rs  widget_toggle.rs
src/widgets/megafonts/: font_ansi_reg.rs  font_ansi_shadow.rs  font_pagga.rs  font_stick.rs  mod.rs
vt100_yh/: CHANGELOG.md  Cargo.toml  LICENSE  README.md
vt100_yh/examples/: fuzz.rs  generate_fixture.rs  process.rs  process_cb.rs  process_cb_bb.rs  process_diff.rs  process_full.rs  real_terminal_compare.rs
vt100_yh/src/: attrs.rs  cell.rs  grid.rs  lib.rs  perform.rs  row.rs  screen.rs  term.rs
vt100_yh/tests/: attr.rs  basic.rs  control.rs  csi.rs  escape.rs  init.rs  scroll.rs  split-escapes.rs  weird.rs  window_contents.rs  write.rs
vt100_yh/tests/helpers/: fixtures.rs  mod.rs
yeehaw/: Cargo.toml  README_DOCS.md
yeehaw/examples/: README.md  audio_player.rs  bat.rs  color_test.rs  colors.rs  colors_basic.rs  editor.rs  editor_test.rs  figlet.rs  file_nav.rs  file_nav_test.rs  hello_world.rs  hello_world_inline.rs  image.rs  image_test.rs  list_control.rs  menu.rs  menu_test.rs  scrollable_pane_test.rs  showcase.rs  stack.rs  stack_test.rs  table.rs  table_demo.rs  table_rs  tabs.rs  tabs_test.rs  terminal.rs  terminal_test.rs  widget_test.rs  widgets.rs  window.rs  window_test.rs
yeehaw/examples/shared/: colors.rs  editor.rs  image.rs  mod.rs  widgets.rs
yeehaw/src/: ansi.rs  ch.rs  color.rs  context.rs  cui.rs  debug.rs  draw_cache.rs  draw_region.rs  dyn_location.rs  dyn_value.rs  element.rs  errors.rs  event.rs  keyboard.rs  lib.rs  log.rs  organizer.rs  prioritizer.rs  sorting_hat.rs  style.rs  tui.rs
yeehaw/src/elements/: border.rs  button.rs  checkbox.rs  debug_pane.rs  dropdownlist.rs  figlet.rs  file_navigator.rs  file_viewer.rs  image_viewer.rs  label.rs  listbox.rs  menu.rs  menu_right_click.rs  mod.rs  pane.rs  pane_parent.rs  pane_scrollable.rs  pane_selectable.rs  radio.rs  scrollbar.rs  shadow.rs  stack.rs  tabs.rs  terminal.rs  terminal_editor.rs  textbox.rs  textbox_numbers.rs  toggle.rs  window.rs
yeehaw/src/elements/containers/: border.rs  mod.rs  stack.rs  table.rs  tabs.rs  window.rs
yeehaw/src/elements/misc/: debug_pane.rs  focuser.rs  menu.rs  menu_right_click.rs  mod.rs  shadow.rs
yeehaw/src/elements/panes/: bat_viewer.rs  file_navigator.rs  file_viewer.rs  mod.rs  pane_limiter.rs  pane_scrollable.rs  pane_selectable.rs  terminal.rs  terminal_editor.rs
yeehaw/src/elements/widgets/: arb_selector.rs  audio_player.rs  button.rs  checkbox.rs  dial.rs  dropdownlist.rs  figlet.rs  image_viewer.rs  label.rs  list_control.rs  listbox.rs  mod.rs  radio.rs  scrollbar.rs  slider.rs  textbox.rs  textbox_numbers.rs  textbox_single_line.rs  toggle.rs
yeehaw/src/widgets/: common.rs  el_widget_pane.rs  mod.rs  widget.rs  widget_button.rs  widget_checkbox.rs  widget_dropdownlist.rs  widget_figlet.rs  widget_label.rs  widget_listbox.rs  widget_radio.rs  widget_scrollbar.rs  widget_textbox.rs  widget_textbox_numbers.rs  widget_toggle.rs
yeehaw_derive/: Cargo.toml
yeehaw_derive/src/: lib.rs
yeehaw_tui/: Cargo.toml  README_DOCS.md
yeehaw_tui/examples/: colors.rs  colors_basic.rs  editor.rs  file_nav.rs  hello_world.rs  hello_world_inline.rs  image.rs  menu.rs  showcase.rs  stack.rs  tabs.rs  terminal.rs  widgets.rs  window.rs
yeehaw_tui/examples/shared/: colors.rs  editor.rs  image.rs  mod.rs  widgets.rs
yeehaw_tui/src/: color.rs  draw_region.rs  event.rs
yeehaw_tui/src/elements/containers/: window.rs
yeehaw_tui/src/elements/misc/: shadow.rs
yeehaw_tui/src/elements/panes/: terminal.rs  terminal_editor.rs
yeehaw_tui/src/elements/widgets/: checkbox.rs  radio.rs  scrollbar.rs
