[package]
name = "yeehaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crossterm = {version = "^0.27.0", features = ["event-stream"]}
futures = "^0.3.0"
anyhow = "^1.0.0"
rand = "^0.8.0"
parking_lot = {version = "^0.12.0", features = ["hardware-lock-elision"] }
once_cell = "^1.19.0"
tokio = { version = "^1.35.0", features = ["time", "sync", "rt", "macros", "rt-multi-thread"] }
snafu = { version = "^0.8.0", features = ["backtrace"] }
serde = { version = "^1.0.207", features = ["derive"] }
serde_json = "^1.0.124"
arboard = "^3.2.0"
taffy = "0.5.2"
