[package]
name = "yeehaw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

crossterm = {version = "^0.28.0", features = ["event-stream", "serde"]}
futures = "^0.3.0"
anyhow = "^1.0.0"
rand = "^0.8.0"
parking_lot = {version = "^0.12.0", features = ["hardware-lock-elision"] }
once_cell = "^1.19.0"
tokio = { version = "^1.35.0", features = ["time", "sync", "rt", "macros", "rt-multi-thread"] }
snafu = { version = "^0.8.0", features = ["backtrace"] }
serde = { version = "^1.0.207", features = ["derive"] }
serde_json = "^1.0.124"
arboard = "^3.2.0"
figlet-rs = "^0.1.5"
dyn-clone = "^1.0.17"
tempfile = "3"

vt100 = { version = "0.15.2" }
portable-pty = { version = "0.8.1" }
bytes = "^1.8.0"

ratatui = "^0.28.0"
ratatui-image = "^1.0.0"
image = { version = ">=0.24", default-features = false, features = ["jpeg"] }

compact_str = "^0.8.0"

