[package]
name = "vt100_yh"
version = "0.17.0"
authors = [
    "Bogz Bonny <bogzbonny@protonmail.com>",
    "Chris Titus <contact@christitus.com>",
    "Jesse Luehrs <doy@tozt.net>",
]
edition = "2021"
repository = "https://github.com/bogzbonny/yeehaw"

description = "Library for parsing terminal data - yeehaw fork"
readme = "README.md"
keywords = ["terminal", "vt100"]
categories = ["command-line-interface", "encoding"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
itoa = "1.0.11"
log = "0.4.22"
unicode-width = "0.2.0"
vte = "0.13.0"

[dev-dependencies]
nix = { version = "0.29.0", features = ["term"] }
quickcheck = "1.0"
rand = "0.8"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
terminal_size = "0.4.0"
vte = "0.13.0"
