[package]
name = "yeehaw"
version = "0.1.0"
edition = "2021"
authors = ["Bogz Bonny <bogzbonny@protonmail.com>", "The Yeehaw Developers"] 
keywords = ["tui", "terminal", "gui", "cli"]
description = "Batteries Included Text Based Application Framework"
documentation = "https://docs.rs/yeehaw/latest/yeehaw/"
repository = "https://github.com/bogzbonny/yeehaw"
categories = ["gui", "text-processing", "command-line-interface", "command-line-utilities"]
readme = "README.md"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

yeehaw_derive = { version = "0.1.0", path = "../yeehaw_derive" }
vt100_yh = { version = "0.17.0", path = "../vt100_yh" }
box_drawing_logic = { version = "0.1.0", path = "../box_drawing_logic" }

crossterm = {version = "^0.28.0", features = ["event-stream", "serde"]}
futures = "^0.3.0"
anyhow = "^1.0.0"
rand = "^0.8.0"
parking_lot = {version = "^0.12.0", features = ["hardware-lock-elision"] }
once_cell = "^1.19.0"
tokio = { version = "^1.35.0", features = ["time", "sync", "rt", "macros", "rt-multi-thread"] }
snafu = { version = "^0.8.0", features = ["backtrace"] }
serde = { version = "^1.0.207", features = ["derive"] }
serde_json = "^1.0.124"
arboard = "^3.2.0"
figlet-rs = "^0.1.5"
dyn-clone = "^1.0.17"
tempfile = "3"
num-traits = "^0.2.0"
rayon = "^1.10.0"
portable-pty = { version = "0.8.1" }
bytes = "^1.8.0"

ratatui = "^0.29.0"
ratatui-image = "4.1.0"
image = { version = ">=0.24", default-features = false, features = ["jpeg"] }

compact_str = "^0.8.0"
