[package]
name = "yeehaw_derive"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/bogzbonny/yeehaw"
authors = ["Bogz Bonny <bogzbonny@protonmail.com>", "The Yeehaw Developers"] 
documentation = "https://docs.rs/yeehaw_derive/latest/yeehaw_derive/"
description = "Derive Macros for Yeehaw"
license = "Apache-2.0"


[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0.87", features = ["full"] }

